# explore-modules

./: .gitignore  CMakeLists.txt  temploid-name-lookup.sln
.github/workflows/: linux.yml  windows.yml
temploid-name-lookup/: CMakeLists.txt  main.cpp  mod.cpp  temploid-name-lookup.vcxproj  temploid-name-lookup.vcxproj.filters
